--- a/package.json
+++ b/package.json
@@ -6,12 +6,20 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "availity-reactstrap-validation": "^2.6.1",
     "bootstrap": "^4.5.2",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
+    "react-calendar": "^3.1.0",
+    "react-confirm-alert": "^2.6.2",
     "react-date-picker": "^8.0.3",
+    "react-datepicker": "^3.3.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
+    "react-schedule-calendar": "^0.22.8",
     "react-scripts": "3.4.3",
+    "react-select": "^3.1.0",
+    "react-toast-notifications": "^2.4.0",
     "reactstrap": "^8.6.0"
   },
   "scripts": {
