--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "@testing-library/user-event": "^7.2.1",
     "availity-reactstrap-validation": "^2.6.1",
     "bootstrap": "^4.5.2",
+    "i": "^0.3.6",
+    "jquery": "^3.5.1",
+    "mdbreact": "^4.27.0",
+    "npm": "^6.14.8",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-calendar": "^3.1.0",
