--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "availity-reactstrap-validation": "^2.6.1",
+    "axios": "^0.21.0",
     "bootstrap": "^4.5.2",
     "i": "^0.3.6",
     "jquery": "^3.5.1",
     "mdbreact": "^4.27.0",
     "npm": "^6.14.8",
+    "qs": "^6.9.4",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-calendar": "^3.1.0",
