Profile Update and Change Password Functionality added in Patient Page.

--- a/src/Config.json
+++ b/src/Config.json
@@ -2,5 +2,7 @@
     "BASEURL":"http://localhost:53002/",
     "LOGIN":"api/auth/token",
     "DOCTOR_REGISTER":"api/doctor/register",
-    "PATIENT_REGISTER":"api/patient/register"
+    "PATIENT_REGISTER":"api/patient/register",
+    "UPDATE_PROFILE":"/api/user/update",
+    "CHANGE_PASSWORD":"api/user/changepassword"
 }
